# file-express

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: build.yml  release.yml
src/: main.rs
