[package]
name = "file-express"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
zip = "8.2.0"
p2ps = {git = "https://github.com/Bicheka/p2ps.git"}
local-ip-address = "0.6.10"

[dev-dependencies]
tokio-test = "0.4.5"

[[bin]]
name = "fexpress"
path = "src/main.rs"